--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="./styles.css" rel="stylesheet" />
+    <script src="script.js"></script>
+    <title> SOPHIA CARAZO &#128539; </title>
 </head>
-<body>
-    <p> hello</p>
-</body>
+<div class = "top">
+    <h1> Welcome! </h1>
+</div>
 </html>
