--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="homemiddle">
             <img class ="picturr" src="IMG_7233.jpg" alt="Yasss" width="500" height="300">
         <br>
-            <button onclick="next('welcome', 'first_q')" id="begin" class="btn">IFYKYK</button>
+            <button onclick="next('welcome', 'first_q')" id="begin" class="btn">Hit The Slay Button</button>
         </div>
     </div>
 
@@ -23,22 +23,22 @@
         <img class ="picturr" src="whatido.jpg" alt="What I do Girl" width="500" height="300">
             <div class="options">
                 <button onclick="next('first_q', 'second_q');scorecount(5)" class="btn"> When you didn't do</button>
-                <button onclick="next('first_q', 'second_q');scorecount(5)" class="btn"> When you went to ellie mason house </button>
-                <button onclick="next('first_q', 'second_q');scorecount(30)" class="btn"> When you do nails </button>
+                <button onclick="next('first_q', 'second_q');scorecount(5)" class="btn"> When you are contemplating what to do next </button>
+                <button onclick="next('first_q', 'second_q');scorecount(20)" class="btn"> When you do nails </button>
                 <button onclick="next('first_q', 'second_q');scorecount(10)" class="btn"> When you dont know what they are talking about</button>
             </div>
         </div>
     </div>
 
     <div id="second_q">
-        <h2 id ="secondref" class="reference"> Mama girl behind you </h2>
+        <h2 id ="secondref" class="reference"> Mama a girl behind you </h2>
         <div class = "middles">
         <img class ="picturr" src="mama-a-girl-behind-you-a-girl-behind-you.gif" alt="Girl Behind You" width="500" height="300">
             <div class="options">
                 <button onclick="next('second_q', 'third_q');scorecount(10)" class="btn"> When your mom has a dancing bitmoji behind her </button>
                 <button onclick="next('second_q', 'third_q');scorecount(5)" class="btn"> To be mischevious and trick your friends </button>
-                <button onclick="next('second_q', 'third_q');scorecount(30)" class="btn"> When a girl is behind you but a woman is in front of you</button>
-                <button onclick="next('second_q', 'third_q');scorecount(20)" class="btn"> When the past is behind you but the future is ahead </button>
+                <button onclick="next('second_q', 'third_q');scorecount(20)" class="btn"> When a girl is behind you but a woman is in front of you</button>
+                <button onclick="next('second_q', 'third_q');scorecount(15)" class="btn"> When the past is behind you but the future is ahead </button>
             </div>
         </div>
     </div>
@@ -49,9 +49,9 @@
         <img class ="picturr" src="treyreloaded-gag.gif" alt="gag or chopped" width="500" height="300">
             <div class="options">
                 <button onclick="next('third_q', 'fourth_q');scorecount(15)" class="btn"> 8 </button>
-                <button onclick="next('third_q', 'fourth_q');scorecount(-5)" class="btn"> Change into boots </button>
-                <button onclick="next('third_q', 'fourth_q');scorecount(-19)" class="btn"> Describes the fall season </button>
-                <button onclick="next('third_q', 'fourth_q');scorecount(-10)" class="btn"> When your cooking is really bad </button>
+                <button onclick="next('third_q', 'fourth_q');scorecount(-10)" class="btn"> Change into boots </button>
+                <button onclick="next('third_q', 'fourth_q');scorecount(-15)" class="btn"> Describes the fall season </button>
+                <button onclick="next('third_q', 'fourth_q');scorecount(-10)" class="btn"> When your cooking tastes like boots </button>
             </div>
         </div>
     </div>
@@ -61,7 +61,7 @@
         <div class = "middles">
         <img class ="picturr" src="8EBA0C20-998D-4D58-A969-5E102EECA38C.jpg" alt="Cats" width="500" height="300">
             <div class="options">
-                <button onclick="next('fourth_q', 'fifth_q');scorecount(5)" class="btn"> When you are a cat</button>
+                <button onclick="next('fourth_q', 'fifth_q');scorecount(20)" class="btn"> Gay little monkey from the apple store </button>
                 <button onclick="next('fourth_q', 'fifth_q');scorecount(5)" class="btn"> When you see your cat</button>
                 <button onclick="next('fourth_q', 'fifth_q');scorecount(10)" class="btn"> When you are billie eilish as a cat</button>
                 <button onclick="next('fourth_q', 'fifth_q');scorecount(20)" class="btn"> Excuse to add cat pictures </button>
@@ -74,31 +74,65 @@
         <div class = "middles">
         <img class ="picturr" src="GVRm-fpXIAA4UoN.jpg" alt="Cake" width="500" height="300">
             <div class="options">
-                <button onclick="next('fifth_q', 'sixth_q');scorecount(30)" class="btn"> Taylor Swift</button>
+                <button onclick="next('fifth_q', 'sixth_q');scorecount(20)" class="btn"> Taylor Swift</button>
                 <button onclick="next('fifth_q', 'sixth_q');scorecount(20)" class="btn"> A natural disaster</button>
-                <button onclick="next('fifth_q', 'sixth_q');scorecount(15)" class="btn"> Getting icecream</button>
-                <button onclick="next('fifth_q', 'sixth_q');scorecount(20)" class="btn"> Birthday Parties</button>
+                <button onclick="next('fifth_q', 'sixth_q');scorecount(10)" class="btn"> Donatella VERSACE &#128156;</button>
+                <button onclick="next('fifth_q', 'sixth_q');scorecount(10)" class="btn"> Birthday Parties</button>
             </div>
         </div>
     </div>
 
     <div id="sixth_q">
-        <h2 id ="sixthref" class="reference"> Poochina vs. Punati </h2>
+        <h2 id ="sixthref" class="reference"> Poochina vs. Punti </h2>
         <div class = "middles">
         <img class ="picturr" src="IMG_7235.PNG" alt="Citizen Test" width="500" height="300">
             <div class="options">
-                <button onclick="scorecount(10); next('sixth_q', 'ending')" class="btn"> Countries at war </button>
-                <button onclick="scorecount(20); next('sixth_q', 'ending')" class="btn"> Lifestyle and nation and place</button>
-                <button onclick="scorecount(-30); next('sixth_q', 'ending')" class="btn"> Tubi show </button>
-                <button onclick="scorecount(-100); next('sixth_q', 'ending')" class="btn"> Imagination </button>
+                <button onclick="scorecount(20); whichend()" class="btn"> Onika = She Ate = Burger </button>
+                <button onclick="scorecount(5); whichend()" class="btn"> Lifestyle </button>
+                <button onclick="scorecount(-30); whichend()" class="btn"> Tubi show </button>
+                <button onclick="scorecount(50); whichend()" class="btn"> I'm voting poochina this election </button>
             </div>
         </div>
     </div>
 
-    <div id="ending">
-        <div class = "middles"> 
+    <div id="ending1">
+        <div class = 'middles'> 
+            <img class ="picturr" src="IMG_5908.PNG" alt="Emoji" width="300" height="220">
             <h2> Hi this is the end </h2>
-            <h3> Yuo</h3>
+            <h3 id = "scoreText1"> You got a: </h3>
+            <img class ="picturr" src="IMG_3270.JPG" alt="Money" width="200" height="150">
+            <p> You don't know</p>
+
+        </div>
+    </div>
+
+    <div id="ending2">
+        <div class = 'middles'> 
+            <img class ="picturr" src="IMG_5908.PNG" alt="Emoji" width="300" height="220">
+            <h2> Hi this is the end </h2>
+            <h3 id = "scoreText2"> You got a: </h3>
+            <img class ="picturr" src="IMG_6984.JPG" alt="Money" width="200" height="150">
+            <p> You lowk don't know</p>
+        </div>
+    </div>
+
+    <div id="ending3">
+        <div class = 'middles'> 
+            <img class ="picturr" src="IMG_5908.PNG" alt="Emoji" width="300" height="220">
+            <h2> Hi this is the end </h2>
+            <h3 id = "scoreText3"> You got a: </h3>
+            <img class ="picturr" src="IMG_5388.jpg" alt="Money" width="200" height="150">
+            <p> Yasss you lowk know</p>
+        </div>
+    </div>
+
+    <div id="ending4">
+        <div class = 'middles'> 
+            <img class ="picturr" src="IMG_5908.PNG" alt="Emoji" width="300" height="220">
+            <h2> Hi this is the end </h2>
+            <h3 id = "scoreText4"> You got a: </h3>
+            <img class ="picturr" src="IMG_5066.JPG" alt="Money" width="200" height="150">
+            <p> You know &#128539; </p>
         </div>
     </div>
 
