ok now final one

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1 id="top"> Welcome! </h1>
         <h2 id ="desc"> Mama a quiz in front of you</h2>
         <div id="homemiddle">
-            <img class ="picturr" src="IMG_7233.jpg" alt="Yasss" width="500" height="300">
+            <img class ="picturr" src="images/IMG_7233.jpg" alt="Yasss" width="500" height="300">
         <br>
             <button onclick="next('welcome', 'first_q')" id="begin" class="btn">Hit The Slay Button</button>
         </div>
@@ -20,7 +20,7 @@
     <div id="first_q">
         <h2 id ="firstref" class="reference"> What I do</h2>
         <div class = "middles">
-        <img class ="picturr" src="whatido.jpg" alt="What I do Girl" width="500" height="300">
+        <img class ="picturr" src="images/whatido.jpg" alt="What I do Girl" width="500" height="300">
             <div class="options">
                 <button onclick="next('first_q', 'second_q');scorecount(5)" class="btn"> When you didn't do</button>
                 <button onclick="next('first_q', 'second_q');scorecount(5)" class="btn"> When you are contemplating what to do next </button>
@@ -33,7 +33,7 @@
     <div id="second_q">
         <h2 id ="secondref" class="reference"> Mama a girl behind you </h2>
         <div class = "middles">
-        <img class ="picturr" src="mama-a-girl-behind-you-a-girl-behind-you.gif" alt="Girl Behind You" width="500" height="300">
+        <img class ="picturr" src="images/mama-a-girl-behind-you-a-girl-behind-you.gif" alt="Girl Behind You" width="500" height="300">
             <div class="options">
                 <button onclick="next('second_q', 'third_q');scorecount(10)" class="btn"> When your mom has a dancing bitmoji behind her </button>
                 <button onclick="next('second_q', 'third_q');scorecount(5)" class="btn"> To be mischevious and trick your friends </button>
@@ -46,7 +46,7 @@
     <div id="third_q">
         <h2 id ="thirdref" class="reference"> Boots</h2>
         <div class = "middles">
-        <img class ="picturr" src="treyreloaded-gag.gif" alt="gag or chopped" width="500" height="300">
+        <img class ="picturr" src="images/treyreloaded-gag.gif" alt="gag or chopped" width="500" height="300">
             <div class="options">
                 <button onclick="next('third_q', 'fourth_q');scorecount(15)" class="btn"> 8 </button>
                 <button onclick="next('third_q', 'fourth_q');scorecount(-10)" class="btn"> Change into boots </button>
@@ -59,7 +59,7 @@
     <div id="fourth_q">
         <h2 id ="fourthref" class="reference"> Meow Meow Meow Meow</h2>
         <div class = "middles">
-        <img class ="picturr" src="8EBA0C20-998D-4D58-A969-5E102EECA38C.jpg" alt="Cats" width="500" height="300">
+        <img class ="picturr" src="images/8EBA0C20-998D-4D58-A969-5E102EECA38C.jpg" alt="Cats" width="500" height="300">
             <div class="options">
                 <button onclick="next('fourth_q', 'fifth_q');scorecount(20)" class="btn"> Gay little monkey from the apple store </button>
                 <button onclick="next('fourth_q', 'fifth_q');scorecount(5)" class="btn"> When you see your cat</button>
@@ -72,7 +72,7 @@
     <div id="fifth_q">
         <h2 id ="fifthref" class="reference"> Clairo Shade</h2>
         <div class = "middles">
-        <img class ="picturr" src="GVRm-fpXIAA4UoN.jpg" alt="Cake" width="500" height="300">
+        <img class ="picturr" src="images/GVRm-fpXIAA4UoN.jpg" alt="Cake" width="500" height="300">
             <div class="options">
                 <button onclick="next('fifth_q', 'sixth_q');scorecount(20)" class="btn"> Taylor Swift</button>
                 <button onclick="next('fifth_q', 'sixth_q');scorecount(20)" class="btn"> A natural disaster</button>
@@ -85,7 +85,7 @@
     <div id="sixth_q">
         <h2 id ="sixthref" class="reference"> Poochina vs. Punti </h2>
         <div class = "middles">
-        <img class ="picturr" src="IMG_7235.PNG" alt="Citizen Test" width="500" height="300">
+        <img class ="picturr" src="images/IMG_7235.PNG" alt="Citizen Test" width="500" height="300">
             <div class="options">
                 <button onclick="scorecount(20); whichend()" class="btn"> Onika = She Ate = Burger </button>
                 <button onclick="scorecount(5); whichend()" class="btn"> Lifestyle </button>
@@ -97,10 +97,10 @@
 
     <div id="ending1">
         <div class = 'middles'> 
-            <img class ="picturr" src="IMG_5908.PNG" alt="Emoji" width="300" height="220">
+            <img class ="picturr" src="images/IMG_5908.PNG" alt="Emoji" width="300" height="220">
             <h2> Hi this is the end </h2>
             <h3 id = "scoreText1"> You got a: </h3>
-            <img class ="picturr" src="IMG_3270.JPG" alt="Money" width="200" height="150">
+            <img class ="picturr" src="images/IMG_3270.JPG" alt="Money" width="200" height="150">
             <p> You don't know</p>
 
         </div>
@@ -108,30 +108,30 @@
 
     <div id="ending2">
         <div class = 'middles'> 
-            <img class ="picturr" src="IMG_5908.PNG" alt="Emoji" width="300" height="220">
+            <img class ="picturr" src="images/IMG_5908.PNG" alt="Emoji" width="300" height="220">
             <h2> Hi this is the end </h2>
             <h3 id = "scoreText2"> You got a: </h3>
-            <img class ="picturr" src="IMG_6984.JPG" alt="Money" width="200" height="150">
+            <img class ="picturr" src="images/IMG_6984.JPG" alt="Money" width="200" height="150">
             <p> You lowk don't know</p>
         </div>
     </div>
 
     <div id="ending3">
         <div class = 'middles'> 
-            <img class ="picturr" src="IMG_5908.PNG" alt="Emoji" width="300" height="220">
+            <img class ="picturr" src="images/IMG_5908.PNG" alt="Emoji" width="300" height="220">
             <h2> Hi this is the end </h2>
             <h3 id = "scoreText3"> You got a: </h3>
-            <img class ="picturr" src="IMG_5388.jpg" alt="Money" width="200" height="150">
+            <img class ="picturr" src="images/IMG_5388.jpg" alt="Money" width="200" height="150">
             <p> Yasss you lowk know</p>
         </div>
     </div>
 
     <div id="ending4">
         <div class = 'middles'> 
-            <img class ="picturr" src="IMG_5908.PNG" alt="Emoji" width="300" height="220">
+            <img class ="picturr" src="images/IMG_5908.PNG" alt="Emoji" width="300" height="220">
             <h2> Hi this is the end </h2>
             <h3 id = "scoreText4"> You got a: </h3>
-            <img class ="picturr" src="IMG_5066.JPG" alt="Money" width="200" height="150">
+            <img class ="picturr" src="images/IMG_5066.JPG" alt="Money" width="200" height="150">
             <p> You know &#128539; </p>
         </div>
     </div>
